# contract-compliance-demo

./: .env.example  .pre-commit-config.yaml  README.md  app.py  events.py  generar_datos.py  main.py  models.py  pyproject.toml  run_streamlit.sh  workflow.py
.github/workflows/: lint.yml
data/: Poliza.docx  Reporte.docx
steps/document_parse/: __init__.py  parse.py
steps/extract_rules/: __init__.py
steps/validate_reporte/: __init__.py
utils/: llm.py  logging.py  settings.py
